--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "gulp-htmlmin": "*"
   },
   "scripts": {
-    "postinstall": "bower install",
+    "postinstall": "bower install && gulp",
     "start": "node server.js"
   },
   "repository": {
