--- a/package.json
+++ b/package.json
@@ -4,6 +4,11 @@
   "description": "A simple app for sending joke messages to Slack",
   "author": "Nathan Hoad",
   "main": "server.js",
+  "private": true,
+  "engines": {
+    "node": ">=0.10.0",
+    "npm": ">=1.3"
+  },
   "dependencies": {
     "express": "~4.1.2",
     "body-parser": "~1.1.1",
