--- a/package.json
+++ b/package.json
@@ -12,9 +12,7 @@
   "dependencies": {
     "express": "~4.1.2",
     "body-parser": "~1.1.1",
-    "request": "~2.35.0"
-  },
-  "devDependencies": {
+    "request": "~2.35.0",
     "gulp": "3.6.x",
     "gulp-concat": "*",
     "gulp-uglify": "*",
