--- a/package.json
+++ b/package.json
@@ -3,21 +3,18 @@
   "version": "0.0.1",
   "description": "A simple app for sending joke messages to Slack",
   "author": "Nathan Hoad",
-  "main": "server.js",
-  "private": true,
-  "engines": {
-    "node": ">=0.10.0",
-    "npm": ">=1.3"
-  },
+  "main": "app/server.js",
   "dependencies": {
-    "express": "~4.1.2",
-    "body-parser": "~1.1.1",
-    "request": "~2.35.0",
-    "gulp": "3.6.x",
+    "express": "~4.1",
+    "body-parser": "~1.1",
+    "request": "~2.35"
+  },
+  "devDependencies": {
+    "gulp": "~3.6",
     "gulp-concat": "*",
     "gulp-uglify": "*",
     "gulp-browserify": "*",
-    "gulp-ruby-sass": "*",
+    "gulp-less": "*",
     "gulp-minify-css": "*",
     "gulp-rename": "*",
     "gulp-notify": "*",
@@ -33,6 +30,6 @@
   },
   "repository": {
     "type": "git",
-    "url": ""
+    "url": "git@bitbucket.org:nathanhoad/slacker.git"
   }
 }
