Change the about text on the company screen

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "request": "~2.35"
   },
   "devDependencies": {
-    "gulp": "~3.6",
+    "gulp": "3.x",
     "gulp-concat": "*",
     "gulp-uglify": "*",
     "gulp-browserify": "*",
