--- a/bower.json
+++ b/bower.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "angular": "~1.2.14",
     "angular-route": "~1.2.14",
-    "angular-classy": "~0.4.1",
+    "klass": "~1.3.1",
+    "emitter.js": "~1.1.0",
     "bootstrap-css": "~3.1.1"
   }
 }
