--- a/package.json
+++ b/package.json
@@ -9,22 +9,21 @@
     "npm": "2.x"
   },
   "dependencies": {
-    "express": "~4.1",
-    "body-parser": "~1.1",
-    "request": "~2.35",
-    "qs": "~1.2",
-    "bower": "1.x",
-    "gulp": "3.x",
-    "gulp-concat": "*",
-    "gulp-streamify": "*",
-    "gulp-uglify": "*",
-    "gulp-util": "^3.0.3",
+    "body-parser": "^1.12.0",
+    "bower": "^1.3.12",
     "browserify": "^7.0.1",
-    "vinyl-source-stream": "*",
-    "gulp-less": "*",
-    "gulp-minify-css": "*",
-    "gulp-rename": "*",
-    "gulp-nodemon": "*"
+    "express": "^4.12.2",
+    "gulp": "^3.8.11",
+    "gulp-concat": "^2.5.2",
+    "gulp-less": "^3.0.1",
+    "gulp-minify-css": "^0.5.1",
+    "gulp-nodemon": "^1.0.5",
+    "gulp-streamify": "0.0.5",
+    "gulp-uglify": "^1.1.0",
+    "gulp-util": "^3.0.3",
+    "qs": "^2.3.3",
+    "request": "~2.35",
+    "vinyl-source-stream": "^1.1.0"
   },
   "scripts": {
     "postinstall": "./node_modules/bower/bin/bower install && gulp build",
